--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3"
   },
