--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-native-screens": "^3.31.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^3.5.2",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "expo-notifications": "~0.28.3",
+    "expo-device": "~6.0.2",
+    "expo-constants": "~16.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
