--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
+    "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -30,15 +30,16 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3",
-    "expo-notifications": "~0.28.3",
+    "expo-notifications": "~0.28.4",
     "expo-device": "~6.0.2",
-    "expo-constants": "~16.0.1"
+    "expo-constants": "~16.0.2",
+    "expo-updates": "~0.25.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
