--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
     "expo": "~51.0.9",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.4",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.15",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -30,10 +35,8 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-query": "^3.39.3",
-    "expo-notifications": "~0.28.4",
-    "expo-device": "~6.0.2",
-    "expo-constants": "~16.0.2",
-    "expo-updates": "~0.25.15"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
