--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^3.5.2",
-    "react-query": "^3.39.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-toast-notifications": "^3.4.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
